<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="sgeorgiev.org.spaceshipgame.GameActivity"
android:background="@drawable/menu"
android:gravity="center"
android:orientation="vertical"
android:textColor="@android:color/white">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:text="@string/help"
    android:layout_marginTop="10sp"
    android:textColor="@android:color/white"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tap"
    android:layout_marginTop="20sp"
    android:textColor="@android:color/white"
    android:textSize="20sp"
    android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collect"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginRight="30sp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"/>


<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableRow android:layout_marginTop="20sp">
        <ImageView
            android:src="@drawable/pu1"
            android:layout_width="40sp"
            android:layout_height="28sp"
            android:layout_marginRight="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5sp"
            />
    </TableRow>

    <TableRow android:layout_marginTop="5sp">
        <ImageView
            android:src="@drawable/pu3"
            android:layout_width="40sp"
            android:layout_height="28sp"
            android:layout_marginRight="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5sp"/>
    </TableRow>

    <TableRow android:layout_marginTop="5sp">
        <ImageView
            android:src="@drawable/pu2"
            android:layout_width="40sp"
            android:layout_height="28sp"
            android:layout_marginRight="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifty"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5sp"/>
    </TableRow>

    <TableRow android:layout_marginTop="20sp">
        <ImageView
            android:src="@drawable/shieldicon"
            android:layout_width="40sp"
            android:layout_marginRight="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shield"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"/>
    </TableRow>

</TableLayout>


</LinearLayout>
